      - Both libraries are now version 1 and have API and ABI guarantees.
      - Added a session-failed signal to indicate if the session didn't start
        and the greeter should try authorizing again.
      - Face images are now local paths not URIs
      - liblightdm-gobject now uses lightdm_ prefix instead of ldm_
      - liblightdm-gobject splits UserList into its own class
    * D-Bus API changes:
      - Make an object per seat
      - Add a CanSwitch property
      - Rename ShowGreeter() to SwitchToGreeter()
    * Drop most of the configure options, they aren't necessary
    * Removed the Vala and Python GTK+ greeters, they weren't being well
      maintained.
    * Drop "example" from the name of the GTK+ and Qt greeters and make them
      official default greeters.
    * Greeters are now just standard X sessions

Overview of changes in lightdm 0.4.4

    * Fix failure to accept XDMCP connections due to invalid assert.
    * Allow minimum-display-number to be set in lightdm.conf and on the command
      line.
    * Session X authority now written to ~/.Xauthority by default.  It can be
      configured to run from the system location by setting
      user-authority-in-system-dir=true in lightdm.conf.
    * When using system authority the authority can be updated by the user.
    * Written X authority files now checks hostname and display number.
    * Enironment is no longer passed through to X servers and sessions, this is
      no longer required now PAM works correctly.
    * liblightdm API changes:
      - Drop ldm_greeter_get_is_first() - it was added for testing and doesn't
        work well.
    * Fix more errors where authentication messages from previous sessions could
      be confused with new sessions.
    * Added XDMCP regression tests.

Overview of changes in lightdm 0.4.3

    * Don't replace Plymouth if it isn't running on a valid VT
    * Allow a null username to log in with - the system will prompt for a
      username.