@@ -1446,8 +1446,6 @@ lightdm_greeter_init (LightDMGreeter *greeter)
 
     priv->read_buffer = g_malloc (HEADER_SIZE);
     priv->hints = g_hash_table_new_full (g_str_hash, g_str_equal, g_free, g_free);
-
-    g_debug ("default-language=%s", lightdm_greeter_get_default_language (greeter));
 }
 
 static void
