@@ -31,6 +31,7 @@ typedef struct
 typedef struct
 {
     GObjectClass parent_class;
+    void (*changed)(LightDMUser *user);
 } LightDMUserClass;
 
 GType lightdm_user_get_type (void);
